--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
@@ -28,6 +31,7 @@
     "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@types/js-cookie": "^3.0.2",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
@@ -44,10 +48,10 @@
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
+    "react-dev-utils": "^12.0.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "source-map-loader": "^4.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
