--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
@@ -45,6 +43,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
