--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
@@ -31,6 +31,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.15",
+    "@types/react-avatar-editor": "^12.0.0",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -40,6 +41,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.30.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
