--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
