--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "dnd-core": "^16.0.1",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
