--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --mode development --env NODE_ENV=dev",
+    "build": "webpack --mode production --env NODE_ENV=prod"
   },
   "keywords": [],
   "author": "",
